# Eunomia

./: CMakeLists.txt  Dockerfile  Makefile  README.md  requirements.txt  setup.py  setup_libs.sh
eunomia/: __init__.py  kappa_map.py  sampler.py
eunomia/sim_tools/: __init__.py  covariance.py  shear_conv_transformations.py
src/: healpix_wrapper.cpp  healpix_wrapper.h  likelihood.c  likelihood.h  maximum_likelihood.c  maximum_likelihood.cpp  maximum_likelihood.h
tests/: plot_chains.py  test_full_cov.py  test_full_likelihood.py  test_gaussian.py  test_healpix_wrapper.py  test_importance_sampling.py  test_max_like.py  test_prior_full_cov.py  test_simulated_annealing.py
tests/test_data/: kappa.fits
